# gambit-lego-pkg

./: .gitignore  README.md  set_env.sh
gambit/: README.txt  stack.xml
gambit/armlib/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit/armlib/ik/: ik_gambit.cpp  ik_hybrid.cpp  ik_wam.cpp
gambit/armlib/include/armlib/: arm.h  gambit.h  geom.h  hybrid.h  js_linear_trajectory.h  recorded_trajectory.h  trajectory.h
gambit/armlib/src/: arm.cpp  gambit.cpp  geom.cpp  hybrid.cpp  js_linear_trajectory.cpp  recorded_trajectory.cpp
gambit/armlib/tests/: clockwise.cpp  go_to.cpp  ik.cpp  multi_traj.cpp  play_traj.cpp  print_positions.cpp  test_traj_read.cpp  test_trajectory.cpp
gambit/armsim/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit/armsim/launch/: arm_sim.launch  display.launch
gambit/armsim/scripts/: enable_gambit_DOFs_sim.py
gambit/armsim/src/: arm_sim_node.cpp  fake_arm.cpp  fake_wrist.cpp
gambit/copley/: CMakeLists.txt  README.txt  canNotes2.txt  mainpage.dox  manifest.xml
gambit/copley/canListen/: canListen.c
gambit/copley/src/: copleyCmds.cpp  copleyErrors.cpp  copleySockCanSdo.cpp  copleyTest.cpp
gambit/dofsliders/: mainpage.dox  manifest.xml
gambit/dofsliders/launch/: arm_sliders.launch  hybrid_sliders.launch  wrist_sliders.launch
gambit/dofsliders/scripts/: dofsliders
gambit/dynamixel/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit/dynamixel/include/bus/: interface.h  interface_ftdi.h  interface_tty.h
gambit/dynamixel/include/dynamixel/: actuator.h  packet.h
gambit/dynamixel/src/: actuator.cpp  packet.cpp
gambit/dynamixel/src/bus/: interface_ftdi.cpp  interface_tty.cpp
gambit/dynamixel/test/: packet_test.cpp
gambit/dynamixel/util/: ping.cpp  ping2.cpp  posdump.cpp  read.cpp  write.cpp
gambit/gambit_driver/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml  rosconfig.cmake.example
gambit/gambit_driver/include/gambit_driver/: DOF.h  actuator.h  actuator_RX28.h  actuator_copley.h  actuator_dummy.h  actuator_group.h  arm.h  robot.h  smoothed_DOF.h  stamped_target.h  wrist.h
gambit/gambit_driver/launch/: arm.launch  arm.launch2  wrist.launch
gambit/gambit_driver/models/: arm1.stl  arm2.stl  arm3.stl  cameramount.stl  primesensor.stl  wrist2.stl  wrist3.stl
gambit/gambit_driver/src/: DOF.cpp  actuator.cpp  actuator_RX28.cpp  actuator_copley.cpp  actuator_dummy.cpp  actuator_group.cpp  arm.cpp  arm_node.cpp  robot.cpp  smoothed_DOF.cpp  wrist.cpp  wrist_node.cpp
gambit/gambit_driver/urdf/: gambit.urdf
gambit/gambit_gazebo_driver/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml  set_env.sh
gambit/gambit_gazebo_driver/matlab_scripts/: ROSpos2grippos.m  converttest.m  ecog.txt  gripos2ROSpos.m  grippos.txt  rospos.txt
gambit/gambit_gazebo_driver/src/: actuator_gazebo.cpp  gazebo_arm.cpp  gazebo_robot_plugin.cc  gazebo_wrist.cpp  robot4gazebo.cpp
gambit/gambit_gazebo_driver/worlds/: empty_world.world
gambit/gambit_msgs/: mainpage.dox  manifest.xml
gambit/gambit_msgs/msg/: ArmInfo.msg  DOFInfo.msg  DOFProperty.msg  (+2 more)
gambit/safetyboard/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit/smoothing/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit_kinect_arm_calibration/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
gambit_kinect_arm_calibration/launch/: calibrate_new_kinect.launch
gambit_kinect_arm_calibration/outputs/: 20120828_CSE491_gambit_kinect_transform.txt  20130601_CSE491_gambit_kinect_transform.txt
gambit_kinect_arm_calibration/rvizconf/: gambit_kinect_arm_calibration.vcg
gambit_kinect_arm_calibration/src/: calibrate_kinect_checkerboard.cpp  calibrate_known_checkerboard.cpp  detect_calibration_pattern.cpp  detect_calibration_pattern.h  gambit_kinect_calibration.cpp
gambit_manip/: CMakeLists.txt  README.txt  gambit_manip.sublime-project  gambit_manip.sublime-workspace  mainpage.dox  manifest.xml  stack.sh
gambit_manip/doc/: README.txt  using_real_robot.txt
gambit_manip/launch/: basic_manip_node_real.launch  basic_manip_node_real_armbox.launch  basic_manip_node_sim.launch
gambit_manip/rvizconf/: icra2013_setup.vcg  initial_demo_setup.vcg
gambit_manip/scripts/: gridtest.py
gambit_manip/src/: arm_interface.cpp  go_to_known_pos.cpp  pickNplace_push_manip.cpp
gambit_manip/src_bak/: arm_interface2.cpp  basic_manip_node2.h
gambit_manip/srv/: BasicMovements.srv  ManipObjectSimple.srv  MoveGripper.srv  MoveObject.srv
gambit_manip/tests/: basic_movement_tests.cpp  tf_test.cpp  user_stop_test.cpp
gambit_perception/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
gambit_perception/backupfiles/launch/: convert_pointcloud_imgdep.launch  event_main_nodelet.launch  test_nodelet.launch
gambit_perception/backupfiles/nodelets/: nodelet_plugins.xml
gambit_perception/backupfiles/nodes/: calibrate_harness_node.py  coord_transform.py  detection.py  handtracking.py  harness_node.py  imageprocessing2.py  subtractTablePlane.py  tableevents.py  test_node.py  util3.py
gambit_perception/backupfiles/params_icra2013/: area.txt
gambit_perception/backupfiles/scripts/: harness_param_viewer.py  params_viewer.py
gambit_perception/backupfiles/src/: convert_pointcloud_imgdep_nodelet.cpp
gambit_perception/backups/nodelets/: event_main_nodelet.cpp  sync_img_dep_nodelet.cpp
gambit_perception/doc/: README.txt  kinect_recording_playback.txt
gambit_perception/include/gambit_perception/: cv_utils.h  handstate.h  handstate_detection.h  handtracking.h  img_dep_sync_node.h  tableevent_detection.h  tableobject.h
gambit_perception/nodes/: state.py  tableobjects2.py  util2.py
gambit_perception/rviz/: test.rviz
gambit_perception/rvizconf/: simple_blocksworld.vcg
gambit_perception/src/: capture_images.cpp  cv_utils_test.cpp  event_main.cpp  event_main_icra2013.cpp  event_main_simple_blocksworld.cpp  interactive_area.cpp  interactive_mask.cpp  learn_basetable.cpp
perception/: manifest.xml
perception/src/: capture_images.cpp  event_main.cpp  event_main_simple_blocksworld.cpp
(+65 files in other folders)
